Mobile summary, spacing fixes

--- a/src/component-library/consultant-finder/CF-forms/TextField/TextField.module.scss
+++ b/src/component-library/consultant-finder/CF-forms/TextField/TextField.module.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   gap: $spacing-3;
   width: 100%;
-  margin-bottom: $spacing-2;
+  margin-bottom: $spacing-5;
 
   label {
     display: flex;
